--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,12 +1,6 @@
 name: Hello
 
-on:
-  workflow_dispatch:
-    inputs:
-      Name:
-        description: Who to greet
-        required: true
-        default: 'GitHub Actions'
+on: [push]
 
 jobs:
   Hello:
@@ -17,6 +11,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Hello
-        uses: ./.github/actions/hello
-        with:
-          Name: ${{ github.event.inputs.Name }}
+        run: echo "Hello, GitHub Actions!"
